# um-abt

./: .ocamlformat  CHANGES.md  LICENSE  README.md  dune  dune-project  index.html  notes.org  um-abt.opam  um-abt.opam.locked
.github/workflows/: main.yml
example/: example.ml
lib/: abt.ml  abt.mli  dune
test/: abt_gen.ml  dune  test.ml
test/example/: dune  example.ml
um-abt/: index.html
um-abt/Abt/: index.html
um-abt/Abt/Make/: index.html
um-abt/Abt/Make/Unification/: index.html
um-abt/Abt/Make/Unification/Subst/: index.html
um-abt/Abt/Make/argument-1-O/: index.html
um-abt/Abt/Make/argument-1-Op/: index.html
um-abt/Abt/Var/: index.html
um-abt/Abt/Var/Binding/: index.html
um-abt/Abt/module-type-Operator/: index.html
um-abt/Abt/module-type-Syntax/: index.html
um-abt/Abt/module-type-Syntax/Op/: index.html
um-abt/Abt/module-type-Syntax/Unification/: index.html
um-abt/Abt/module-type-Syntax/Unification/Subst/: index.html
